Last edit on EC2 notebook

--- a/EC2Notebook.ipynb
+++ b/EC2Notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -17,12 +17,43 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from pandas import DataFrame\n",
+    "from pandas import Series\n",
     "import scipy as sp\n",
     "import sklearn\n",
     "import matplotlib as mat\n",
     "from matplotlib import pyplot as plt\n",
-    "import time"
+    "import time\n",
+    "import json\n",
+    "import datetime"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dataset = \"/home/ec2-user/amazon_dataset/reviews_Home_and_Kitchen_5.json\"\n",
+    "start = time.time()\n",
+    "with open(dataset) as data:\n",
+    "    df = DataFrame(columns=json.loads(data.readline()).keys())\n",
+    "    for i,line in enumerate(data.readlines()):\n",
+    "        df.append(Series(json.loads(line).values()),ignore_index=True)\n",
+    "end = time.time()\n",
+    "print 'Dataset importation time:',datetime.timedelta(seconds=(end-start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
