--- a/first_example/FirstExample.ipynb
+++ b/first_example/FirstExample.ipynb
@@ -2,21 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: '/Volumes/HD\\\\ Journaled/Dataset/Video_Games_5.json'",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-a71e061885f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mriky_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\Kindle_Store_5.json\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mluca_path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#This JSON file is around ~800MB\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;31m#lines = [json.loads(line) for line in data.readlines()]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mok\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: '/Volumes/HD\\\\ Journaled/Dataset/Video_Games_5.json'"
-     ],
-     "output_type": "error"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset importation time: 0:04:09.711000\n"
+     ]
     }
    ],
    "source": [
@@ -26,14 +22,10 @@
     "import datetime\n",
     "\n",
     "start = time.time()\n",
-    "luca_path = \"/Volumes/HD_Journaled/Dataset/reviews_Kindle_Store_5\"\n",
-    "riky_path = \"C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\Kindle_Store_5.json\"\n",
-    "path = riky_path\n",
-    "with open(path) as data: #This JSON file is around ~800MB\n",
-    "    #lines = [json.loads(line) for line in data.readlines()]\n",
-    "    print(ok)\n",
+    "with open(\"C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\Kindle_Store_5.json\") as data: #This JSON file is around ~800MB\n",
+    "    lines = [json.loads(line) for line in data.readlines()]\n",
     "\n",
-    "#df = pd.DataFrame([elm.values() for elm in lines],columns=lines[0].keys())\n",
+    "df = pd.DataFrame([elm.values() for elm in lines],columns=lines[0].keys())\n",
     "end = time.time()\n",
     "print 'Dataset importation time:',datetime.timedelta(seconds=(end-start))"
    ]
