Finally first working version implemented with Dask + Castra (Blaze environment), still problems with metadata.json, but RAM usage is no longer a problem

--- a/FirstExample.ipynb
+++ b/FirstExample.ipynb
@@ -2345,7 +2345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Version 3: SQLite + Pandas"
+    "## Version 3: SQLite + Pandas *(too long to create the .db file)*"
    ]
   },
   {
@@ -2423,7 +2423,7 @@
     "collapsed": true
    },
    "source": [
-    "## Blaze"
+    "## Blaze *(didn't go through...)*"
    ]
   },
   {
@@ -2458,50 +2458,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Dask and Castra](http://blaze.pydata.org/blog/2015/09/08/reddit-comments/)"
+    "# Finally Working: [Dask and Castra](http://blaze.pydata.org/blog/2015/09/08/reddit-comments/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from __future__ import division, print_function\n",
-    "import ujson\n",
-    "from pandas import Timestamp, NaT, DataFrame\n",
-    "from toolz import dissoc\n",
-    "from toolz import dissoc,peek, partition_all\n",
-    "from castra import Castra\n",
-    "\n",
-    "def to_json(line):\n",
-    "    \"\"\"Convert a line of json into a cleaned up dict.\"\"\"\n",
-    "    blob = ujson.loads(line)\n",
-    "    \n",
-    "    #Remove reviewTime as it's redundant\n",
-    "    return dissoc(blob,'helpful')\n",
-    "\n",
-    "filename = \"C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\Electronics_5.json\"\n",
-    "columns = ['asin', 'reviewerID','reviewerName', 'overall','summary','reviewText','reviewTime','unixReviewTime']\n",
-    "\n",
-    "def to_df(batch):\n",
-    "    \"\"\"Convert a list of json strings into a dataframe\"\"\"\n",
-    "    blobs = map(to_json, batch)\n",
-    "    df = DataFrame.from_records(blobs, columns=columns)\n",
-    "    return df\n",
-    "\n",
-    "with open(filename) as f:\n",
-    "    batches = partition_all(200000, f)\n",
-    "    df, frames = peek(map(to_df, batches))\n",
-    "    castra = Castra('C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\amazon_data.castra', template=df)\n",
-    "    castra.extend_sequence(frames)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -2510,9 +2472,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed |  3.5s\n"
+      "Execution time:\n",
+      "67.3950002193\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "from __future__ import division, print_function\n",
+    "import ujson\n",
+    "from pandas import Timestamp, NaT, DataFrame\n",
+    "from toolz import dissoc\n",
+    "from toolz import dissoc,peek, partition_all\n",
+    "from castra import Castra\n",
+    "import time\n",
+    "import dask.dataframe as dd\n",
+    "import dask.bag as db\n",
+    "from dask.diagnostics import ProgressBar\n",
+    "\n",
+    "def to_json(line):\n",
+    "    \"\"\"Convert a line of json into a cleaned up dict.\"\"\"\n",
+    "    blob = ujson.loads(line)\n",
+    "    \n",
+    "    #Remove reviewTime as it's redundant\n",
+    "    return dissoc(blob,'helpful')\n",
+    "\n",
+    "filename = \"C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\Movies_and_TV_5.json\"\n",
+    "columns = ['asin', 'reviewerID','reviewerName', 'overall','summary','reviewText','reviewTime','unixReviewTime']\n",
+    "\n",
+    "def to_df(batch):\n",
+    "    \"\"\"Convert a list of json strings into a dataframe\"\"\"\n",
+    "    blobs = map(to_json, batch)\n",
+    "    df = DataFrame.from_records(blobs, columns=columns)\n",
+    "    return df\n",
+    "\n",
+    "def create_castra():\n",
+    "    with open(filename) as f:\n",
+    "        batches = partition_all(5000, f)\n",
+    "        castra = None\n",
+    "        for batch in batches:\n",
+    "            df = to_df(batch)\n",
+    "            if castra == None:\n",
+    "                castra = Castra('C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\amazon_data.castra', template=df)\n",
+    "            castra.extend(df)\n",
+    "\n",
+    "start = time.time()\n",
+    "create_castra()\n",
+    "\n",
+    "# Start a progress bar for all computations\n",
+    "pbar = ProgressBar(minimum=3.0,dt=0.5)\n",
+    "pbar.register()\n",
+    "\n",
+    "# Load data into a dask dataframe:\n",
+    "df = dd.from_castra('C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\amazon_data.castra')\n",
+    "\n",
+    "end = time.time()\n",
+    "print(\"Execution time:\")\n",
+    "print(end-start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -2534,115 +2558,105 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0528881469</td>\n",
-       "      <td>AO94DHGC771SJ</td>\n",
-       "      <td>amazdnu</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Gotta have GPS!</td>\n",
-       "      <td>We got this GPS for my husband who is an (OTR)...</td>\n",
-       "      <td>06 2, 2013</td>\n",
-       "      <td>1370131200</td>\n",
+       "      <td>0005019281</td>\n",
+       "      <td>ADZPIG9QOCDG5</td>\n",
+       "      <td>Alice L. Larson \"alice-loves-books\"</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>good version of a classic</td>\n",
+       "      <td>This is a charming version of the classic Dick...</td>\n",
+       "      <td>02 26, 2008</td>\n",
+       "      <td>1203984000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0528881469</td>\n",
-       "      <td>AMO214LNFCEI4</td>\n",
-       "      <td>Amazon Customer</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Very Disappointed</td>\n",
-       "      <td>I'm a professional OTR truck driver, and I bou...</td>\n",
-       "      <td>11 25, 2010</td>\n",
-       "      <td>1290643200</td>\n",
+       "      <td>0005019281</td>\n",
+       "      <td>A35947ZP82G7JH</td>\n",
+       "      <td>Amarah Strack</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Good but not as moving</td>\n",
+       "      <td>It was good but not as emotionally moving as t...</td>\n",
+       "      <td>12 30, 2013</td>\n",
+       "      <td>1388361600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0528881469</td>\n",
-       "      <td>A3N7T0DY83Y4IG</td>\n",
-       "      <td>C. A. Freeman</td>\n",
+       "      <td>0005019281</td>\n",
+       "      <td>A3UORV8A9D5L2E</td>\n",
+       "      <td>Amazon Customer</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1st impression</td>\n",
-       "      <td>Well, what can I say.  I've had this unit in m...</td>\n",
-       "      <td>09 9, 2010</td>\n",
-       "      <td>1283990400</td>\n",
+       "      <td>Winkler's Performance was ok at best!</td>\n",
+       "      <td>Don't get me wrong, Winkler is a wonderful cha...</td>\n",
+       "      <td>12 30, 2013</td>\n",
+       "      <td>1388361600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0528881469</td>\n",
-       "      <td>A1H8PY3QHMQQA0</td>\n",
-       "      <td>Dave M. Shaw \"mack dave\"</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Great grafics, POOR GPS</td>\n",
-       "      <td>Not going to write a long review, even thought...</td>\n",
-       "      <td>11 24, 2010</td>\n",
-       "      <td>1290556800</td>\n",
+       "      <td>0005019281</td>\n",
+       "      <td>A1VKW06X1O2X7V</td>\n",
+       "      <td>Amazon Customer \"Softmill\"</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>It's an enjoyable twist on the classic story</td>\n",
+       "      <td>Henry Winkler is very good in this twist on th...</td>\n",
+       "      <td>02 13, 2008</td>\n",
+       "      <td>1202860800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0528881469</td>\n",
-       "      <td>A24EV6RXELQZ63</td>\n",
-       "      <td>Wayne Smith</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Major issues, only excuses for support</td>\n",
-       "      <td>I've had mine for a year and here's what we go...</td>\n",
-       "      <td>09 29, 2011</td>\n",
-       "      <td>1317254400</td>\n",
+       "      <td>0005019281</td>\n",
+       "      <td>A3R27T4HADWFFJ</td>\n",
+       "      <td>BABE</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Best Scrooge yet</td>\n",
+       "      <td>This is one of the best Scrooge movies out.  H...</td>\n",
+       "      <td>12 22, 2013</td>\n",
+       "      <td>1387670400</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         asin      reviewerID              reviewerName  overall  \\\n",
-       "0  0528881469   AO94DHGC771SJ                   amazdnu      5.0   \n",
-       "1  0528881469   AMO214LNFCEI4           Amazon Customer      1.0   \n",
-       "2  0528881469  A3N7T0DY83Y4IG             C. A. Freeman      3.0   \n",
-       "3  0528881469  A1H8PY3QHMQQA0  Dave M. Shaw \"mack dave\"      2.0   \n",
-       "4  0528881469  A24EV6RXELQZ63               Wayne Smith      1.0   \n",
+       "         asin      reviewerID                         reviewerName  overall  \\\n",
+       "0  0005019281   ADZPIG9QOCDG5  Alice L. Larson \"alice-loves-books\"      4.0   \n",
+       "1  0005019281  A35947ZP82G7JH                        Amarah Strack      3.0   \n",
+       "2  0005019281  A3UORV8A9D5L2E                      Amazon Customer      3.0   \n",
+       "3  0005019281  A1VKW06X1O2X7V           Amazon Customer \"Softmill\"      5.0   \n",
+       "4  0005019281  A3R27T4HADWFFJ                                 BABE      4.0   \n",
        "\n",
-       "                                  summary  \\\n",
-       "0                         Gotta have GPS!   \n",
-       "1                       Very Disappointed   \n",
-       "2                          1st impression   \n",
-       "3                 Great grafics, POOR GPS   \n",
-       "4  Major issues, only excuses for support   \n",
+       "                                        summary  \\\n",
+       "0                     good version of a classic   \n",
+       "1                        Good but not as moving   \n",
+       "2         Winkler's Performance was ok at best!   \n",
+       "3  It's an enjoyable twist on the classic story   \n",
+       "4                              Best Scrooge yet   \n",
        "\n",
        "                                          reviewText   reviewTime  \\\n",
-       "0  We got this GPS for my husband who is an (OTR)...   06 2, 2013   \n",
-       "1  I'm a professional OTR truck driver, and I bou...  11 25, 2010   \n",
-       "2  Well, what can I say.  I've had this unit in m...   09 9, 2010   \n",
-       "3  Not going to write a long review, even thought...  11 24, 2010   \n",
-       "4  I've had mine for a year and here's what we go...  09 29, 2011   \n",
+       "0  This is a charming version of the classic Dick...  02 26, 2008   \n",
+       "1  It was good but not as emotionally moving as t...  12 30, 2013   \n",
+       "2  Don't get me wrong, Winkler is a wonderful cha...  12 30, 2013   \n",
+       "3  Henry Winkler is very good in this twist on th...  02 13, 2008   \n",
+       "4  This is one of the best Scrooge movies out.  H...  12 22, 2013   \n",
        "\n",
        "   unixReviewTime  \n",
-       "0      1370131200  \n",
-       "1      1290643200  \n",
-       "2      1283990400  \n",
-       "3      1290556800  \n",
-       "4      1317254400  "
+       "0      1203984000  \n",
+       "1      1388361600  \n",
+       "2      1388361600  \n",
+       "3      1202860800  \n",
+       "4      1387670400  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import dask.dataframe as dd\n",
-    "import dask.bag as db\n",
-    "from dask.diagnostics import ProgressBar\n",
-    "\n",
-    "# Start a progress bar for all computations\n",
-    "pbar = ProgressBar(minimum=3.0,dt=0.5)\n",
-    "pbar.register()\n",
-    "\n",
-    "# Load data into a dask dataframe:\n",
-    "df = dd.from_castra('C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\amazon_data.castra')\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -2651,24 +2665,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed | 20.6s\n"
+      "[########################################] | 100% Completed | 40.5s\n",
+      "[########################################] | 100% Completed | 41.0s\n",
+      "[########################################] | 100% Completed | 41.5s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "asin              1689188\n",
-       "overall           1689188\n",
-       "reviewText        1689188\n",
-       "reviewTime        1689188\n",
-       "reviewerID        1689188\n",
-       "reviewerName      1664458\n",
-       "summary           1689188\n",
-       "unixReviewTime    1689188\n",
+       "asin              1697533\n",
+       "overall           1697533\n",
+       "reviewText        1697533\n",
+       "reviewTime        1697533\n",
+       "reviewerID        1697533\n",
+       "reviewerName      1691457\n",
+       "summary           1697533\n",
+       "unixReviewTime    1697533\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2679,7 +2695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -2688,26 +2704,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed |  5.3s\n"
+      "[########################################] | 100% Completed |  5.7s\n",
+      "[########################################] | 100% Completed |  6.2s\n",
+      "[########################################] | 100% Completed |  6.7s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "B007WTAJTO    4915\n",
-       "B003ES5ZUU    4143\n",
-       "B00DR0PDNE    3798\n",
-       "B0019EHU8G    3435\n",
-       "B002WE6D44    2813\n",
-       "B003ELYQGG    2652\n",
-       "B0002L5R78    2599\n",
-       "B009SYZ8OC    2542\n",
-       "B00BGGDVOO    2104\n",
-       "B002V88HFE    2082\n",
+       "B003EYVXV4    2213\n",
+       "B001KVZ6HK    2110\n",
+       "B009934S5M    1974\n",
+       "B0059XTU1S    1746\n",
+       "B005LAIHXQ    1637\n",
+       "B005LAIIMG    1584\n",
+       "B00AF6B22E    1548\n",
+       "B00FZM8Z7I    1517\n",
+       "B00H83EUL2    1494\n",
+       "B002VPE1AW    1461\n",
        "Name: asin, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2833,22 +2851,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Version 4: Trying just with Dask"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import ujson\n",
+    "import dask.dataframe as dd\n",
+    "import dask.bag as db\n",
+    "from dask.diagnostics import ProgressBar\n",
+    "\n",
+    "# Start a progress bar for all computations\n",
+    "pbar = ProgressBar(minimum=3.0,dt=0.5)\n",
+    "pbar.register()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 17.0s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1097592"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "js = db.read_text(\"C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\CDs_and_Vinyl_5.json\").map(ujson.loads)\n",
+    "js.count().compute()"
+   ]
   }
  ],
  "metadata": {
