--- a/first_example/FirstExample.ipynb
+++ b/first_example/FirstExample.ipynb
@@ -2381,7 +2381,6 @@
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -2398,7 +2397,8 @@
       "\u001b[1;32mC:\\Users\\ricky\\Anaconda2\\lib\\site-packages\\sqlalchemy\\engine\\base.py\u001b[0m in \u001b[0;36m_commit_impl\u001b[1;34m(self, autocommit)\u001b[0m\n\u001b[0;32m    686\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"COMMIT\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    687\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 688\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdialect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdo_commit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnection\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    689\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    690\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_handle_dbapi_exception\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\Users\\ricky\\Anaconda2\\lib\\site-packages\\sqlalchemy\\engine\\default.py\u001b[0m in \u001b[0;36mdo_commit\u001b[1;34m(self, dbapi_connection)\u001b[0m\n\u001b[0;32m    421\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    422\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mdo_commit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdbapi_connection\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 423\u001b[1;33m         \u001b[0mdbapi_connection\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    424\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    425\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mdo_close\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdbapi_connection\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -2528,7 +2528,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -2555,13 +2555,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "path_to = \"C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\\"\n",
+    "riky_path = \"C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\\"\n",
+    "luca_path = \"/Volumes/HD_Journaled/Dataset/\"\n",
+    "path_to = luca_path\n",
     "reviews = \"kcore_5.json.gz\"\n",
     "metadata = \"metadata.json.gz\"\n",
     "reviews_columns = ['asin', 'reviewerID','reviewerName', 'overall','summary','reviewText','reviewTime','unixReviewTime']\n",
@@ -2578,7 +2580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -2606,14 +2608,16 @@
     "#We can work properly on compressed GZ files with gzip library\n",
     "#The chunk size is 5000, which means that 5000 lines per time will be processed\n",
     "def create_castra(fullpath,chunksize):\n",
-    "    filename = fullpath.split('\\\\')[-1].split('.')[0] #Used later\n",
+    "    win_filename = fullpath.split('\\\\')[-1].split('.')[0] #Used later\n",
+    "    mac_filename = fullpath.split('/')[-1].split('.')[0]\n",
+    "    filename = win_filename\n",
     "    with gzip.open(fullpath,'rb') as f:\n",
     "        batches = partition_all(chunksize, f)\n",
     "        castra = None\n",
     "        for batch in batches:\n",
     "            df = to_df(batch,filename)\n",
     "            if castra == None:\n",
-    "                castra = Castra('C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\amazon_'+filename+'.castra', template=df)\n",
+    "                castra = Castra(path_to+filename+'.castra', template=df)\n",
     "            castra.extend(df)"
    ]
   },
@@ -2626,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -2637,9 +2641,7 @@
      "text": [
       "Starting the creation of the Castra files...\n",
       "Processing compressed metadata...\n",
-      "Done! Metadata processed in: 0:28:07.318000\n",
-      "Processing compressed 5_cores...\n",
-      "Done! Reviews data processed in: 0:34:50.926000\n"
+      "Done! Metadata processed in: 1:17:59.844894\n"
      ]
     }
    ],
@@ -2651,8 +2653,17 @@
     "start = time.time()\n",
     "create_castra(path_to+metadata,chunksize)\n",
     "end = time.time()\n",
-    "print \"Done! Metadata processed in:\",datetime.timedelta(seconds=(end-start))\n",
-    "\n",
+    "print \"Done! Metadata processed in:\",datetime.timedelta(seconds=(end-start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#Creating the castra file for the 5_cores\n",
     "print 'Processing compressed 5_cores...'\n",
     "start = time.time()\n",
@@ -2903,95 +2914,10 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "(function(global) {\n",
-       "  function now() {\n",
-       "    return new Date();\n",
-       "  }\n",
-       "\n",
-       "  if (typeof (window._bokeh_onload_callbacks) === \"undefined\") {\n",
-       "    window._bokeh_onload_callbacks = [];\n",
-       "  }\n",
-       "\n",
-       "  function run_callbacks() {\n",
-       "    window._bokeh_onload_callbacks.forEach(function(callback) { callback() });\n",
-       "    delete window._bokeh_onload_callbacks\n",
-       "    console.info(\"Bokeh: all callbacks have finished\");\n",
-       "  }\n",
-       "\n",
-       "  function load_libs(js_urls, callback) {\n",
-       "    window._bokeh_onload_callbacks.push(callback);\n",
-       "    if (window._bokeh_is_loading > 0) {\n",
-       "      console.log(\"Bokeh: BokehJS is being loaded, scheduling callback at\", now());\n",
-       "      return null;\n",
-       "    }\n",
-       "    if (js_urls == null || js_urls.length === 0) {\n",
-       "      run_callbacks();\n",
-       "      return null;\n",
-       "    }\n",
-       "    console.log(\"Bokeh: BokehJS not loaded, scheduling load and callback at\", now());\n",
-       "    window._bokeh_is_loading = js_urls.length;\n",
-       "    for (var i = 0; i < js_urls.length; i++) {\n",
-       "      var url = js_urls[i];\n",
-       "      var s = document.createElement('script');\n",
-       "      s.src = url;\n",
-       "      s.async = false;\n",
-       "      s.onreadystatechange = s.onload = function() {\n",
-       "        window._bokeh_is_loading--;\n",
-       "        if (window._bokeh_is_loading === 0) {\n",
-       "          console.log(\"Bokeh: all BokehJS libraries loaded\");\n",
-       "          run_callbacks()\n",
-       "        }\n",
-       "      };\n",
-       "      s.onerror = function() {\n",
-       "        console.warn(\"failed to load library \" + url);\n",
-       "      };\n",
-       "      console.log(\"Bokeh: injecting script tag for BokehJS library: \", url);\n",
-       "      document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "    }\n",
-       "  };\n",
-       "\n",
-       "  var js_urls = ['https://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js', 'https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.js', 'https://cdn.pydata.org/bokeh/release/bokeh-compiler-0.12.0.min.js'];\n",
-       "\n",
-       "  var inline_js = [\n",
-       "    function(Bokeh) {\n",
-       "      Bokeh.set_log_level(\"info\");\n",
-       "    },\n",
-       "    \n",
-       "    function(Bokeh) {\n",
-       "      Bokeh.$(\"#1d192b53-8116-4c59-bd84-c5b62f40d1f5\").text(\"BokehJS successfully loaded\");\n",
-       "    },\n",
-       "    function(Bokeh) {\n",
-       "      console.log(\"Bokeh: injecting CSS: https://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css\");\n",
-       "      Bokeh.embed.inject_css(\"https://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css\");\n",
-       "      console.log(\"Bokeh: injecting CSS: https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css\");\n",
-       "      Bokeh.embed.inject_css(\"https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css\");\n",
-       "    }\n",
-       "  ];\n",
-       "\n",
-       "  function run_inline_js() {\n",
-       "    for (var i = 0; i < inline_js.length; i++) {\n",
-       "      inline_js[i](window.Bokeh);\n",
-       "    }\n",
-       "  }\n",
-       "\n",
-       "  if (window._bokeh_is_loading === 0) {\n",
-       "    console.log(\"Bokeh: BokehJS loaded, going straight to plotting\");\n",
-       "    run_inline_js();\n",
-       "  } else {\n",
-       "    load_libs(js_urls, function() {\n",
-       "      console.log(\"Bokeh: BokehJS plotting callback run at\", now());\n",
-       "      run_inline_js();\n",
-       "    });\n",
-       "  }\n",
-       "}(this));"
-      ]
-     },
+     "data": {},
      "metadata": {},
      "output_type": "display_data"
     }
@@ -3069,21 +2995,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
