Solved merge conflict

--- a/EC2/EC2Notebook.ipynb
+++ b/EC2/EC2Notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -22,6 +22,35 @@
     "import matplotlib as mat\n",
     "from matplotlib import pyplot as plt\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of reviews: 10261\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ujson\n",
+    "import dask.dataframe as dd\n",
+    "import dask.bag as db\n",
+    "from dask.diagnostics import ProgressBar\n",
+    "\n",
+    "# Start a progress bar for all computations\n",
+    "pbar = ProgressBar(minimum=3.0,dt=0.5)\n",
+    "pbar.register()\n",
+    "\n",
+    "js = db.read_text(\"../amazon_dataset/reviews_Musical_Instruments_5.json\").map(ujson.loads)\n",
+    "print \"number of reviews: \" + str(js.count().compute())"
    ]
   },
   {
