--- a/first_example/FirstExample.ipynb
+++ b/first_example/FirstExample.ipynb
@@ -2500,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -2529,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -2537,7 +2537,7 @@
    "source": [
     "riky_path = \"C:\\\\dtu\\\\ctbd\\\\amazon_dataset\\\\\"\n",
     "luca_path = \"/Volumes/HD_Journaled/Dataset/\"\n",
-    "path_to = luca_path\n",
+    "path_to = riky_path\n",
     "reviews = \"kcore_5.json.gz\"\n",
     "metadata = \"metadata.json.gz\"\n",
     "reviews_columns = ['asin', 'reviewerID','reviewerName', 'overall','summary','reviewText','reviewTime','unixReviewTime']\n",
@@ -2655,7 +2655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -2785,7 +2785,7 @@
        "4      1376092800  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2871,37 +2871,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div class=\"bk-root\">\n",
-       "        <a href=\"http://bokeh.pydata.org\" target=\"_blank\" class=\"bk-logo bk-logo-small bk-logo-notebook\"></a>\n",
-       "        <span id=\"1d192b53-8116-4c59-bd84-c5b62f40d1f5\">Loading BokehJS ...</span>\n",
-       "    </div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {},
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from bokeh.charts import TimeSeries, output_notebook, show\n",
-    "output_notebook()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -2970,21 +2939,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
