--- a/Neo4J/Neo4J.ipynb
+++ b/Neo4J/Neo4J.ipynb
@@ -54,8 +54,8 @@
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "from tqdm import *\n",
+    "import time \n",
+    "import datetime\n",
     "\n",
     "def parse_line(line):\n",
     "    product = eval(line)\n",
@@ -69,26 +69,31 @@
     "            params['price'] = None\n",
     "    return params\n",
     "\n",
-    "def reset():\n",
-    "    session.run(\"MATCH (n) OPTIONAL MATCH (n)-[r]-() DELETE n,r\")\n",
-    "    session.run(\"CREATE CONSTRAINT ON (p:Product) ASSERT p.productID IS UNIQUE\")\n",
+    "start = time.time()\n",
+    "session.run(\"CREATE CONSTRAINT ON (p:Product) ASSERT p.productID IS UNIQUE\")\n",
     "\n",
-    "    session.run(\"CREATE CONSTRAINT ON (p:Product) ASSERT p.productID IS UNIQUE\")\n",
     "with open(\"/Users/lucacambiaghi/amz_dataset/metadata_no_books.json\", \"r\") as data:\n",
-    "    count=0\n",
+    "    line_count=0\n",
+    "    products = []\n",
     "    for line in data:\n",
-    "        params = parse_line(line)\n",
-    "        if not (params.has_key('title')) :\n",
-    "            count +=1\n",
-    "            continue\n",
-    "        create_query = \"\"\"CREATE (p:Product {productID:{asin}})\n",
-    "        SET p.name={title}, p.price=toFloat({price})\"\"\"\n",
-    "        session.run(create_query, params)\n",
-    "        count+=1\n",
-    "        if count % 30000 == 0:\n",
-    "            print str(count*1.0/600000) + '% completed'\n",
+    "        products.append(parse_line(line))\n",
+    "        line_count = line_count + 1\n",
+    "        if(line_count % 1000 == 0):#every 1000 lines\n",
+    "            with session.new_transaction() as tx:\n",
+    "                for product in products:\n",
+    "                    if not (product.has_key('title')):\n",
+    "                        continue\n",
+    "                    else:\n",
+    "                        create_query=\"\"\"CREATE (p:Product {productID:{asin}})\n",
+    "                        SET p.name={title}, p.price=toFloat({price})\"\"\"\n",
+    "                        tx.run(create_query, params)\n",
+    "                tx.success() # check every 1000 queries\n",
+    "                products = []\n",
+    "            if line_count % 30000 == 0: #every 30000 lines\n",
+    "                print (line_count*1.0/600000), '% completed' # print every 5%\n",
     "session.close()\n",
-    "print \"done\""
+    "end = time.time()\n",
+    "print \"executed in:\", datetime.timedelta(seconds = (end - start))"
    ]
   },
   {
@@ -157,6 +162,14 @@
     "            break\n",
     "print \"done\"\n",
     "session.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query\n",
+    "- "
    ]
   }
  ],
