Added Neo4j credentials for my graph db

--- a/EC2/Spark.ipynb
+++ b/EC2/Spark.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1261,10 +1261,10 @@
     "## 2) Products Analysis\n",
     "* What are the products for which the most voted reviews were written?\n",
     "* Top salesRankValues: which are the top-sold products for each category?\n",
-    "* What are the main categories of the products for which people have been more satisfied in terms of overall score?\n",
     "* What are the most appreciated products in terms of average overall?\n",
+    "* What are the main categories of the products for which people have been more satisfied in terms of overall score?\n",
     "\n",
-    "### Top 20 products related to the most voted reviews:\n",
+    "### 2.1 Top 20 products related to the most voted reviews:\n",
     "We can easily extract the most voted reviews according to the `helpful` column:"
    ]
   },
@@ -1460,7 +1460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Top-sold products for each category\n",
+    "### 2.2 Top-sold products for each category\n",
     "The `salesRankCategories` and `salesRankValues` tell us what is the rank for each product in some specific categories. For each (*main, not sub*) category, we want to find out which are the top-sold products:"
    ]
   },
@@ -1538,7 +1538,7 @@
     "collapsed": true
    },
    "source": [
-    "### Most appreciated products according to the Average Overall\n",
+    "### 2.3 Most appreciated products according to the Average Overall\n",
     "We can calculate which products are the **most appreciated** ones according to the **average overall of their reviews** (*we must filter the results and for instance take only those products having at least 1000 reviews*):"
    ]
   },
@@ -1662,7 +1662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Which are the most/least recommended categories to buy from on Amazon? *(to be completed)*\n",
+    "### 2.4 Which are the most/least recommended categories to buy from on Amazon? *(to be completed)*\n",
     "We are wondering this, such that according to the current insights, we have a clear overview of **which categories are the most/least reliable according to customer satisfaction**. Since there are basically differences between each category, and the amount of orders of products from the different categories is not the same, we can't provide results according only to the **overall** (*how much a customer was satisfied*) or the **reviews frequency** (*how many people bought the products*).\n",
     "\n",
     "Hence, we calculate the **average overall** for each category but we consider also the **standard deviation**, and the lower this value the better."
@@ -1725,6 +1725,7 @@
     "## 4) Temporal Analysis\n",
     "How did the reviews change over time? We can make some plots...\n",
     "* How many reviews written every day/month/year? We can plot the distribution and see which days represent the peaks\n",
+    "* How many reviews for each product?\n",
     "* Same as before, but separated for negative reviews (overal <= 2.0) and positive reviews (overal >=3.0) and compare them\n",
     "* Distribution of the average overall score: did it change over time?\n",
     "* Sentiment analysis over time: how much did the sentiment change in general?"
@@ -2334,6 +2335,13 @@
     "\n",
     "* We've seen that people has been particularly **active** in terms of writing reviews in winter months, especially in **december/january**;\n",
     "* Lots of peaks were identified close to **Christmas period** in december: is this maybe a clear signal that people tend to buy a lot of products in that period? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How many reviews for each product? *(to be completed)*"
    ]
   },
   {
