Included info on how to find amazon product from its product id

--- a/EC2/Spark.ipynb
+++ b/EC2/Spark.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How to find a product on Amazon.com from its ProductID (`asin`):\n",
+    "\n",
+    "http://www.amazon.com/exec/obidos/ASIN/insert_ASIN_here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Parsing Reviews and Metadata"
    ]
   },
@@ -695,7 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can find out the **products with the highest number of reviews**:"
+    "We can find out the **products with the highest number of reviews *(to be completed)***:"
    ]
   },
   {
